--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
     <title>Intro to the DOM</title>
 </head>
 <body>
-    <h1 class="titleName" id="titleId">
+    <h1 class="titleName" id="title1">
         Lorem, ipsum dolor.
     </h1>
+    <h1 class="titleName" id="title2">
+        Lorem, ipsum dolor.
+    </h1>
+    <h2 class="titleName" id="title3">
+        Lorem, ipsum dolor.
+    </h2>
 
     <button onClick="change()">Click me</button>
 
